--- a/src/style.css
+++ b/src/style.css
@@ -1,37 +1,62 @@
-body {
-  margin:0;
+html, body {
+  margin: 0;
   padding: 0;
+  height: 100%;
 }
 
-.auto-hide-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #595959;
-  color: #959595;
+div#app {
+  height: 100%;
 }
 
-.auto-hide-header .logo {
-  position: absolute;
-  top: 35%;
+.body-content {
+  height: 100%;
 }
 
-.auto-hide-header .primary-nav {
+.header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background-color: #3b7abb;
+}
+.header .logo {
+    float: left;
+    height: 40px;
+    padding: 15px 30px;
+    line-height: 40px;
+}
+
+.primary-nav {
   float: right;
+  width: auto;
+  height: auto;
+  margin-right: 5%;
 }
 
-.auto-hide-header .primary-nav ul {
-  margin-right: 20px;
-  list-style: none;
+.primary-nav ul {
+    list-style: none;
+    margin: 0;
 }
 
-.auto-hide-header .primary-nav ul>li {
+.nav-item {
   display: inline-block;
-  padding: 10px;
+  padding: 15px 20px;
+  line-height: 40px;
 }
 
-.auto-hide-header .primary-nav ul>li a {
+.nav-item a {
   text-decoration: none;
-  color: #ffffff;
+  color: white;
+}
+
+
+.main {
+  padding: 70px 50px;
+  min-height: calc(100vh - 140px);
+  margin-bottom: -40px;
+}
+
+.footer {
+  height: 40px;
 }
